# nure_timetable

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.6b1e0f1  CMakeLists.txt.user.bd09572  README.md  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf  sudo
android/: AndroidManifest.xml
languages/: en.ts  ru (copy).ts  ru.ts
qml/components/: FindPage.qml  Header.qml  LessonInfo.qml  MessageDialog.qml  SavedTimetables.qml  SearchComponent.qml  Settings.qml  SettingsGroupPage.qml  SettingsPage.qml  StyleSettings.qml  TableSettingsPage.qml  TimetableSettings.qml  TimetableTable.qml
qml/styles/: BottomBorder.qml  BurgerButton.qml  HeaderButton.qml  RowButton.qml  StyledText.qml  StyledTextLarge.qml  StyledTextMedium.qml
src/internal/: api_base.h  api_structs.h  executor.cpp  executor.h  hide_serialize.h  json_parser.h  macro.h  material.cpp  material.h  query_builder.cpp  query_builder.h  traits.h
src/qml/: saved_model.cpp  saved_model.h  search_filter_model.cpp  search_filter_model.h  search_model.cpp  search_model.h  settings_group_model.cpp  settings_group_model.h  settings_model.h  table_model.cpp  table_model.h  treemodel.cpp  treemodel.h  treenode.cpp  treenode.h
src/src/: api.cpp  api.h  cache.h  database.h  language.h  local_storage.cpp  local_storage.h  saved_model.cpp  search_filter_model.cpp  settings.h  settings_group_model.cpp  settings_model.cpp
